--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
+    "semantic-ui-css": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -33,6 +35,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nodemon": "^2.0.20",
     "typescript": "~4.8.2"
   }
 }
