--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
             sudo docker pull mail2prajwal12/apod-view:latest
 
             # Run a new container from a new image
-            sudo docker run -d -p 7777:7777 --name apod-view mail2prajwal12/apod-view
+            sudo docker run -d -p 7777:7777 --network=apod-localnet --name apod-view mail2prajwal12/apod-view
