--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-infinite-scroll": "^15.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "semantic-ui-css": "^2.5.0",
