--- a/package.json
+++ b/package.json
@@ -6,37 +6,38 @@
     "start": "ng serve --host 0.0.0.0 --port 7777 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers ChromeHeadless"
+    "test": "ng test --browsers ChromeHeadless",
+    "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.8",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^16.0.5",
-    "@angular/core": "^15.2.2",
-    "@angular/forms": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "@angular/router": "^15.2.8",
+    "@angular/animations": "^15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "ngx-infinite-scroll": "^15.0.0",
     "ngx-pagination": "^6.0.3",
-    "rxjs": "~7.8.1",
+    "rxjs": "~7.8.0",
     "semantic-ui-css": "^2.5.0",
-    "tslib": "^2.5.3",
-    "zone.js": "~0.13.1"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.5",
-    "@angular/cli": "~16.0.5",
-    "@angular/compiler-cli": "^16.0.5",
-    "@types/jasmine": "~4.3.2",
-    "jasmine-core": "~5.0.1",
-    "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.2.0",
+    "@angular-devkit/build-angular": "^15.0.5",
+    "@angular/cli": "~15.0.5",
+    "@angular/compiler-cli": "^15.0.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "nodemon": "^2.0.22",
-    "typescript": "~5.0.4"
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "nodemon": "^2.0.20",
+    "typescript": "~4.8.2"
   }
 }
