--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,24 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Deploy to Oracle Cloud via SSH action
+      - name: SSH into EC2 and pull Docker image
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.ORACLE_HOST }}
-          username: ${{ secrets.ORACLE_USERNAME }}
-          key: ${{ secrets.ORACLE_PRIVATE_KEY }}
-          port: 22
+          host: ${{ secrets.EC2_HOST_IP }}
+          username: ec2-user
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            #!/bin/sh
-                      
-            # Stop running apod-view Docker Containers
-            sudo docker rm apod-view -f
-            
-            # Free up space
-            sudo docker system prune -a
-
-            # Pull the Docker Image 
             sudo docker pull mail2prajwal12/apod-view:latest
-
-            # Run a new container from a new image
-            sudo docker run -d -p 7777:7777 --network=apod-localnet --name apod-view mail2prajwal12/apod-view
+            
+      - name: Run Docker container on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST_IP }}
+          username: ec2-user
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            sudo docker run -d -p 80:80 mail2prajwal12/apod-view:latest
