--- a/.github/workflows/deploy-fullstack-on-ec2.yml
+++ b/.github/workflows/deploy-fullstack-on-ec2.yml
@@ -25,12 +25,12 @@ jobs:
       - name: SSH into EC2 Instance and Stop Existing Containers
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST_IP }} << EOF
-            docker stop apod-view || true
+            sudo docker stop apod-view || true
           EOF
 
       - name: SSH into EC2 Instance and Run Docker Containers
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST_IP }} << EOF
-            docker pull mail2prajwal12/apod-view:latest
-            docker run -d --name apod-view -p 80:4200 mail2prajwal12/apod-view:latest
+            sudo docker pull mail2prajwal12/apod-view:latest
+            sudo docker run -d --name apod-view -p 80:4200 -p 443:4200 mail2prajwal12/apod-view:latest
           EOF
