remove  docker container after stopping

--- a/.github/workflows/deploy-fullstack-on-ec2.yml
+++ b/.github/workflows/deploy-fullstack-on-ec2.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST_IP }} << EOF
             sudo docker stop apod-view || true
+            sudo docker rm apod-view || true
           EOF
 
       - name: SSH into EC2 Instance and Run Docker Containers
