--- a/.github/workflows/deploy-fullstack-on-ec2.yml
+++ b/.github/workflows/deploy-fullstack-on-ec2.yml
@@ -1,13 +1,10 @@
-name: Deploy Docker Containers
+name: Deploy Docker On EC2
 
 on:
-    push: 
-      branches: [ "master" ]
-    pull_request:
-      branches: 
-        - master
-      types: [closed]
-    workflow_dispatch:
+  workflow_run:
+    workflows: ["ci-cd-main"]
+    types:
+      - completed
 
 jobs:
   deploy:
