--- a/.github/workflows/deploy-fullstack-on-ec2.yml
+++ b/.github/workflows/deploy-fullstack-on-ec2.yml
@@ -25,7 +25,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST_IP }} << EOF
             sudo docker stop apod-view || true
             sudo docker rm apod-view || true
-            sudo docker rmi apod-view || true
+            sudo docker rmi -f $(sudo docker images -q mail2prajwal12/apod-view) || true
           EOF
 
       - name: SSH into EC2 Instance and Run Docker Containers
